# FTPDataExchange

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  scratch.md  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
FTPDataExchange/: FTPDataExchange.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: FTPDataExchange.py  __init__.py
tests/: __init__.py  test_FTPDataExchange.py
