[project]
name = "FTPDataExchange"
version = "1.0.0"
description = "Box push pull functions via FTP"
readme = "README.md"
requires-python = ">=3.7"
#license = {file = "LICENSE"}

authors = [
	{name = "Alexander McFarland"}
]
maintainers = [
	{name = "Alexander McFarland"}
]

classifiers = [
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = ["black"]
test = ["pytest", "pytest-cov"]

[project.urls]
"Homepage" = "https://github.com/agmcfarland/FTPDataExchange/"
"Bug Reports" = "https://github.com/agmcfarland/FTPDataExchange/issues"
"Source" = "https://github.com/agmcfarland/FTPDataExchange/"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
